Estructura de carpetas y uv

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "obtencion-almacenamiento-datos"
 version = "0.1.0"
-description = "Add your description here"
+description = "Archivo de dependencias necesarias para el proyecto"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
