--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "pymeteosource>=1.7.0",
-    "pymongo>=4.15.4",
+    "pymongo[srv]",
+    "python-dotenv",
 ]
